parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__keywords-0.snap
---
source: src/lexer/lexer.rs
description: False None True and as assert async await
---
[
    Token {
        kind: False,
        value: None,
        start: 0,
        end: 5,
    },
    Token {
        kind: None,
        value: None,
        start: 6,
        end: 10,
    },
    Token {
        kind: True,
        value: None,
        start: 11,
        end: 15,
    },
    Token {
        kind: And,
        value: None,
        start: 16,
        end: 19,
    },
    Token {
        kind: As,
        value: None,
        start: 20,
        end: 22,
    },
    Token {
        kind: Assert,
        value: None,
        start: 23,
        end: 29,
    },
    Token {
        kind: Async,
        value: None,
        start: 30,
        end: 35,
    },
    Token {
        kind: Await,
        value: None,
        start: 36,
        end: 41,
    },
]
