parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__keywords-2.snap
---
source: src/lexer/lexer.rs
description: finally for from global if import in is lambda
---
[
    Token {
        kind: Finally,
        value: None,
        start: 0,
        end: 7,
    },
    Token {
        kind: For,
        value: None,
        start: 8,
        end: 11,
    },
    Token {
        kind: From,
        value: None,
        start: 12,
        end: 16,
    },
    Token {
        kind: Global,
        value: None,
        start: 17,
        end: 23,
    },
    Token {
        kind: If,
        value: None,
        start: 24,
        end: 26,
    },
    Token {
        kind: Import,
        value: None,
        start: 27,
        end: 33,
    },
    Token {
        kind: In,
        value: None,
        start: 34,
        end: 36,
    },
    Token {
        kind: Is,
        value: None,
        start: 37,
        end: 39,
    },
    Token {
        kind: Lambda,
        value: None,
        start: 40,
        end: 46,
    },
]
