parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__newline-in-nested-structure-0.snap
---
source: src/lexer/lexer.rs
description: "(a,\n\n)"
---
[
    Token {
        kind: LeftParen,
        value: None,
        start: 0,
        end: 1,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 1,
        end: 2,
    },
    Token {
        kind: Comma,
        value: None,
        start: 2,
        end: 3,
    },
    Token {
        kind: RightParen,
        value: None,
        start: 5,
        end: 6,
    },
]
