parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__numeric-binary-3.snap
---
source: src/lexer/lexer.rs
description: 0b11
---
[
    Token {
        kind: Binary,
        value: Number(
            "0b11",
        ),
        start: 0,
        end: 4,
    },
]
