parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__numeric-binary-5.snap
---
source: src/lexer/lexer.rs
description: 0b101
---
[
    Token {
        kind: Binary,
        value: Number(
            "0b101",
        ),
        start: 0,
        end: 5,
    },
]
