parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__numeric-hexadecimal-11.snap
---
source: src/lexer/lexer.rs
description: "0xb"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xb",
        ),
        start: 0,
        end: 3,
    },
]
